Atualizar CV e corrigir 1 erro de Portugues.

--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -65,7 +65,7 @@
 						Meu desenvolvimento é contínuo. A cada atividade em equipe, para mim, é uma oportunidade para aprender novas competências técnicas e humanas. Até das situações mais adversas costumo tirar algum aprendizado.<br>
 						Nas atividades em equipe sempre sou engajado e colaborativo, não hesito em pedir ajuda e em ajudar. Das <i>soft skills</i> mais evidentes em mim, destaco a adaptabilidade, colaboração, responsabilidade e resiliência.<br><br>
 						
-						<a href="https://drive.google.com/file/d/1c1AsUdwluB9IkryOvlhfGbUX7ew68GPl/view?usp=sharing" target="_blank" class="button">Meu currículo</a>
+						<a href="https://drive.google.com/file/d/1e8HAKFf7YNepnVK4gmmeE6n16lT3BrdS/view?usp=sharing" target="_blank" class="button">Meu currículo</a>
 						
 						</center>
 
@@ -419,7 +419,7 @@
 									</div>
 									<div class="card-body">
 										<h5 class="card-title">Português Nativo</h5>
-										<p class="card-text">Capacidade de me comunicar na linguagem formal e informal do idioma, com amplo conhecimento gramatical e ótima hábilidade para comunicação técnica.</p>
+										<p class="card-text">Capacidade de me comunicar na linguagem formal e informal do idioma, com amplo conhecimento gramatical e ótima habilidade para comunicação técnica.</p>
 									</div>
 								</div>
 							</div>
