[NOVO] Pagina de Pagamento Online.

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,6 +135,12 @@
 								<p>O programa captura a imagem de um código de barras e em seguida abstrai a imegm, onde pode acessar informações como preço e outros dados de um produto.</p>
 								<a href="../templates/codigo_barras.html" class="icon">Saber mais</a>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="" class="image fit thumb"><img src="" alt="Mercado Pago e Mais Top Estética" height="170px" /></a>
+								<h3>Checkout - Pagamento Online</h3>
+								<p>Um recurso para pagamento online com as formas de pagamento PIX, boleto, Cartão de Crédito e Débito, com gestão de credenciais da conta e controle de pagamentos.</p>
+								<a href="../templates/pagamento_online.html" class="icon">Saber mais</a>
+							</article>
 						</div>
 
 						<h2>API</h2>
