--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@
 						</div>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/nota_fiscal.avif" class="image fit thumb"><img src="../static/images/nota_fiscal.avif" height="100%" alt="Classificador de Obesidade" /></a>
+								<a href="https://raw.githubusercontent.com/guilhermedonizetti/Portofolio/master/static/images/nota_fiscal.avif" class="image fit thumb"><img src="https://raw.githubusercontent.com/guilhermedonizetti/Portofolio/master/static/images/nota_fiscal.avif" height="100%" alt="Classificador de Obesidade" /></a>
 								<h3>Emissão de Notas Fiscais</h3>
 								<p>Um recurso para emitir Notas Fiscais eletrônicas para Serviços e Produtos (NFS-e / NFC-e) automaticamente, com valor fiscal e validade jurídica.</p>
 								<a href="../templates/emissao_notas_fiscais.html" class="icon">Saber mais</a>
